Switched to https to please Chrome security checks.

--- a/org.scala-ide.sdt.core.tests/charts/charts.html
+++ b/org.scala-ide.sdt.core.tests/charts/charts.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Memory Leaks Test results</title>
 
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript">
 var chart;
 $(document).ready(function () {
@@ -119,8 +119,8 @@ function displayVal() {
 		</script>
 	</head>
 	<body>
-<script type="text/javascript" src="http://scala-ide.org/resources/javascript/highcharts/highcharts.js"></script>
-<script type="text/javascript" src="http://scala-ide/org/resources/javascript/highcharts/modules/exporting.js"></script>
+<script type="text/javascript" src="https://scala-ide.org/resources/javascript/highcharts/highcharts.js"></script>
+<script type="text/javascript" src="https://scala-ide/org/resources/javascript/highcharts/modules/exporting.js"></script>
 
 <div id="container" style="width: 1000px; height: 500px; margin: 0 auto"></div>
 
