--- a/org.scala-ide.sdt.core.tests/charts/charts.html
+++ b/org.scala-ide.sdt.core.tests/charts/charts.html
@@ -119,8 +119,8 @@ function displayVal() {
 		</script>
 	</head>
 	<body>
-<script type="text/javascript" src="https://scala-ide.org/resources/javascript/highcharts/highcharts.js"></script>
-<script type="text/javascript" src="https://scala-ide/org/resources/javascript/highcharts/modules/exporting.js"></script>
+<script type="text/javascript" src="http://scala-ide.org/resources/javascript/highcharts/highcharts.js"></script>
+<script type="text/javascript" src="http://scala-ide.org/resources/javascript/highcharts/modules/exporting.js"></script>
 
 <div id="container" style="width: 1000px; height: 500px; margin: 0 auto"></div>
 
